--- a/vercel.json
+++ b/vercel.json
@@ -13,8 +13,8 @@
       }
     ],
     "headers": [
-      {  "source":"/(.*)"},
-    {
+      {  "source":"/(.*)",
+    
       
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
